--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <!-- 改成你需要的名称 -->
-    <groupId>Muban</groupId>
+    <groupId>BlackLightRelic</groupId>
     <!-- 改成你需要的名称 -->
-    <artifactId>Muban</artifactId>
+    <artifactId>BlackLightRelic</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <!-- 改成你需要的名称 -->
-    <name>Muban</name>
+    <name>BlackLightRelic</name>
     <!-- 改不改由你 -->
     <description>a sts mod.</description>
 
