--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <!-- 改成你需要的名称 -->
-    <groupId>BlackLightRelic</groupId>
+    <groupId>OnePower</groupId>
     <!-- 改成你需要的名称 -->
-    <artifactId>BlackLightRelic</artifactId>
+    <artifactId>OnePower</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <!-- 改成你需要的名称 -->
-    <name>BlackLightRelic</name>
+    <name>OnePower</name>
     <!-- 改不改由你 -->
     <description>a sts mod.</description>
 
@@ -55,7 +55,15 @@
             <scope>system</scope>
             <systemPath>${Steam.path}/workshop/content/646570/1609158507/StSLib.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>loadout</groupId>
+            <artifactId>loadout</artifactId>
+            <version>2.11.0</version>
+            <scope>system</scope>
+            <systemPath>${Steam.path}/workshop/content/646570/2814267979/loadout.jar</systemPath>
+        </dependency>
     </dependencies>
+
 
     <build>
         <finalName>${project.artifactId}</finalName>
